fix: user menu popover is behind sidebar

--- a/components/sidebar/component.module.css
+++ b/components/sidebar/component.module.css
@@ -31,6 +31,7 @@
     transform: translateX(-100%);
     transition: transform 500ms ease-in-out;
     width: 22rem;
+    z-index: 10;
   }
 
   .sidebarOpened {
