--- a/components/user-menu-button/component.module.css
+++ b/components/user-menu-button/component.module.css
@@ -15,6 +15,7 @@
   flex-direction: row;
   min-width: 15rem;
   padding: 1rem;
+  z-index: 20;
 }
 
 .userInfo {
